# C3PO

./: .gitignore  README.md  pyproject.toml
example/: .env.example  README.md  blogger.py
example/codeway/: blogger.py
example/configway/: blogger.py  main.py
example/configway/config/: agents.yaml  tasks.yaml
example/tools/: browser.py  pyproject.toml
example/utils/: events.py  pyproject.toml
src/estate/: __init__.py  main.py
src/estate/agents/: __init__.py  realtor.py
src/estate/assets/: perfect_home.md
src/estate/tasks/: __init__.py  find_estate.py
src/estate/tools/: __init__.py  estate_search_tools.py  specification_reader.py
