[project]
name = "crew"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "proteusiq", email = "praysonpi@gmail.com" }
]
dependencies = [
    "crewai[tool]>=0.28.8",
    "crewai-tools>=0.1.7",
    "tools @ file:///Users/pwd/Codes/agents/crew/example/tools",
    "utils @ file:///Users/pwd/Codes/agents/crew/example/utils",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/crewai"]

